# customAI

./: .dockerignore  .env  .env.example  .gitignore  LICENSE  README.md  biome.json  bun.lockb  compose.yaml  docker-compose.prod.yml  docker-compose.yml  makefile  package.json  tsconfig.json  upload-images.sh
.cursor/rules/: bun-rule.mdc  nextjs-rule.mdc
.github/workflows/: deploy.yaml
apps/ai-service/: .gitignore  Dockerfile  data.yaml  dev.Dockerfile  pyproject.toml  requirements.txt
apps/ai-service/app/: main.py
apps/ai-service/app/helpers/: dataset.py  evaluation.py  models.py  realtime_log.py
apps/ai-service/app/models/: augmentation.py  dl.py  use_model.py
apps/ai-service/app/services/dataset/: augmentation.py
apps/ai-service/app/services/model/: dl_pretrained.py  training.py  use_model.py
apps/ai-service/src/: app.py
apps/backend/: .env  .env.example  Dockerfile  bun.lockb  dev.Dockerfile  drizzle.config.ts  log.Dockerfile  package.json  queue.Dockerfile  tsconfig.json
apps/frontend/: .env  .env.example  Dockerfile  biome.json  bun.lockb  components.json  dev.Dockerfile  global.d.ts  jest.config.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
apps/python/: app.py  dev.Dockerfile  pyproject.toml
docker/: dev.backend.Dockerfile  dev.frontend.Dockerfile
docs/reports/: cpe.bib  (+9 more)
images/: cors.json  upload-images.sh
kubenetes/: ai-app.yaml  backend-app.yaml  frontend-app.yaml  postgres.yaml  rabbitmq.yaml  redis.yaml
monitoring/: promtail-config.yml
testbucket/: cors.json
(+663 files in other folders)
