[tool.poetry]
name = "ai_app"  # Replace with your app name
version = "0.1.0"  # Replace with your app version
description = "An AI application for FastAPI and Uvicorn."
authors = ["Your Name <your.email@example.com>"]  # Replace with your details

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"  # Optional: Add any development dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"